Configure native access in docker compose