@@ -18,4 +18,4 @@ EXPOSE 8080
 WORKDIR /app
 COPY --from=builder /app/target/app-0.1.0-standalone.jar /app/app-0.1.0-standalone.jar
 
-CMD ["sh", "-c", "java $JAVA_OPTS -XX:+PrintFlagsFinal -jar app-0.1.0-standalone.jar"]
+CMD ["sh", "-c", "java --enable-native-access=ALL-UNNAMED $JAVA_OPTS -XX:+PrintFlagsFinal -jar app-0.1.0-standalone.jar"]
